sunuo (0.1.9) unstable; urgency=low

  * created debian package
  * fixed typo in Config.cs which disabled <ignore-type/>
  * write etc/sunuo.xml only if it did not exist
  * fixed NullReferenceException in overlay error handler
  * home page changed to http://www.sunuo.org/
  * the mailing list is now hosted on BerliOS

 --

sunuo (0.1.8) unstable; urgency=low

  * more NetStat.Dispose() tweaks:
    - a second Dispose() call continues with FinishDispose()
    - call FinishDispose() in CheckAlive()
  * remove duplicate data directories
  * replaced World.MultiProcessor by Core.Config.MultiThreading
  * added configuration file option for Core.Config.MultiThreading

 -- Max Kellermann <max@duempel.org>  Tue, 10 May 2005 00:23:05 +0200

sunuo (0.1.7) unstable; urgency=low

  * wait for send transfers to be finished before killing the connection
    in NetState.Dispose()
  * added test program "UOGQuery" which queries the UOGateway status of a
    freeshard
  * Mono 1.1.7 is now recommended
  * moved documentation to doc/sunuo.xml in DocBook format

 -- Max Kellermann <max@duempel.org>  Sun,  8 May 2005 22:37:47 +0200

sunuo (0.1.6) unstable; urgency=low

  * introduce the "path" element in the library configuration, allowing
    the administrator to specify arbitrary source paths
  * dependencies for libraries
  * overlays for libraries

 -- Max Kellermann <max@duempel.org>  Thu,  5 May 2005 21:14:32 +0200

sunuo (0.1.5) unstable; urgency=low

  * now really fixed a null cast in ScriptCompiler.CheckStamps()

 -- Max Kellermann <max@duempel.org>  Thu, 10 Mar 2005 21:48:12 +0100

sunuo (0.1.4) unstable; urgency=low

  * fixed a lot of C# compiler warnings
  * workaround for the RunUO faction bug: Reflection.cs assumes
    alphabetically sorted directory entries; ScriptCompiler.cs now sorts
    filenames before passing them to the compiler
  * fixed a null cast in ScriptCompiler.CheckStamps()

 -- Max Kellermann <max@duempel.org>  Thu,  3 Mar 2005 21:04:41 +0100
